2003-12-28  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/readmidi.c, timidity/reverb.[ch]:
	  Support for Velocity Limit and Note Limit through GS / XG SysEx.
	  Support for Rx. Note On and Rx. Note Off through GS SysEx.
	  Support for XG SysEx Drum Setup.
	  Support for Dry Level through XG SysEx.

2003-12-27  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/readmidi.[ch]:
	  Fix about SysEx.
	  Fix XG channel layer.
	  Fix around channel pressure.
	* timidity/playmidi.[ch], timidity/resample.c,
	  interface/slang_c.c, interface/tk_c.c,
	  interface/w32g_subwin3.c, interface/xaw_c.c,
	  interface/w32g_c.c, interface/ vt100_c.c:
	  Rewrite modulation wheel.

2003-12-26  Saito <saito2@digitalme.com>

	* timidity/playmidi.c, timidity/readmidi.c:
	  Fix around channel pressure.

2003-12-25  Kentaro Sato <kentaro@ranvis.com>
	* timidity/playmidi.c, timidity/readmidi.c,
	  timidity/tables.[ch], timidity/timidity.c:
	  Support for GM2 default MSB bank and volume curve.

2003-12-24  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Fix around channel pressure.
	  Fix system exclusive message.
	  Fix channel layer.

2003-12-23  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.[ch], timidity/playmidi.[ch],
	  timidity/tables.[ch], timidity/effect.c:
	  Implement XG Multi EQ.
	  Implement XG Part EQ (tone only).

2003-12-23  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c, timidity/readmidi.[ch], timidity/reverb.[ch]
	  timidity/tables.[ch], timidity/timidity.c:
	  Support for GM2 On SysEx. and pan table.

2003-12-21  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.c, timidity/playmidi.c:
	  Fix about Insertion Effect.
	  Sort out codes.
	  Fix lowpass filter for system effect.

2003-12-16  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.c:
	  Implement Plate Reverberator.
	* timidity/mix.c: